Merged revision 926297:r926297 | sverberkt | 2009-02-14 19:28:49 -0500 (Sat, 14 Feb 2009) | 3 lines

Don't let labels fire click events on disabled objects.
BUG:159682

svn path=/branches/KDE/4.2/kdelibs/; revision=942329